# pqrun

./:  brainstorming.md  .gitignore  DECISIONS.md  DESIGN.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  TODO.md  pyproject.toml  zensical.toml
docs/: index.md
docs/developer/: architecture.md  decisions.md  design.md  index.md  release-notes.md
docs/user/: configuration.md  index.md  quickstart.md
examples/: cleanup.sql  enqueue_patterns.sql  fastapi_example.py  worker_only.py
scripts/: update_skill_docs_tree.py
scripts/config/: pqrun-usage-docs-tree.toml
skills/public/pqrun-usage/: SKILL.md
skills/public/pqrun-usage/agents/: openai.yaml
src/pgjobq/: __init__.py  backoff.py  ddl.sql  models.py  store_asyncpg.py  worker.py
src/pqrun/: __init__.py  backoff.py  ddl.sql  models.py  skill_installer.py  store_asyncpg.py  worker.py
tests/: conftest.py  test_core_unittest.py  test_fastapi_smoke.py  test_integration_store.py  test_pytest_unit.py  test_skill_installer.py  test_store_validation.py  test_worker_behavior.py  test_worker_env.py
